Updating and adding to

--- a/pages/templates/components/footer.html
+++ b/pages/templates/components/footer.html
@@ -1,13 +1,14 @@
 ﻿<!-- components/footer.html -->
 
-<footer id="footer" class="text-muted">
+<footer id="footer" class="text-muted border-top">
   <div id="footer-container" class="container">
-    <p>
-      Copyright &copy; 2021. <strong>Fake-Company</strong>
-    </p>
+    <p>Copyright &copy; 2021. <strong>Fake-Company</strong></p>
     <p>
       Django/Bootstrap starter template - 
-      <a href="https://www.github.com/brlaney42/django-bootstrap-boilerplate" target="_blank">
+      <a 
+        href="https://github.com/Brlaney/django-bs-starter" 
+        target="_blank"
+      >
         link to repository
       </a>
     </p>
