--- a/pages/templates/components/navbar.html
+++ b/pages/templates/components/navbar.html
@@ -2,8 +2,10 @@
 
 <nav id="nav" class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Web App</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" href="/">Django-Bootstrap</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+      data-bs-target="#navbarNav" aria-controls="navbarNav" 
+      aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -11,10 +13,13 @@
         {% for page in pages %}
           {% if page.link is True %}
             <li class="nav-item">  
-              <a class="nav-link active" aria-current="page" href="/{{ page.slug }}">{{ page.title }}</a>
+              <a class="nav-link active" aria-current="page" href="/{{ page.slug }}">
+                {{ page.title }}
+              </a>
             </li>
           {% endif %}
         {% endfor %}
+      </ul>
     </div>
   </div>
 </nav>
