--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -1,8 +1,6 @@
 ﻿<!doctype html>
 <html lang="en">
-
 {% load static %}
-
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,16 +8,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <title>Website title</title>
-    <link rel="shortcut icon" src="{% static '/favicon.ico' type='image/x-icon' %}"/>
+    <title>Django-Bootstrap</title>
+    <link rel="shortcut icon" src="{% static '/image/django-bs.png' %}" />
   </head>
+
   <body>  
 
     <!-- Navbar component -->
     {% include 'components/navbar.html' %}
-
+    
     <!-- Main content -->
-    <main class="flex-shrink-0">
+    <main id="main" class="flex-shrink-0">
       {% block content %}{% endblock %}
     </main>
 
