--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,18 +2,42 @@
 
 :root {
   font-size: 16px;
+  /* General colors */
+  --bs-blue: #0d6efd;
+  --bs-indigo: #6610f2;
+  --bs-purple: #6f42c1;
+  --bs-pink: #d63384;
+  --bs-red: #dc3545;
+  --bs-orange: #fd7e14;
+  --bs-yellow: #ffc107;
+  --bs-green: #198754;
+  --bs-teal: #20c997;
+  --bs-cyan: #0dcaf0;
+  --bs-white: #fff;
+  --bs-gray: #6c757d;
+  --bs-gray-dark: #343a40;
+  /* Palette */
+  --bs-primary: #0d6efd;
+  --bs-secondary: #6c757d;
+  --bs-success: #198754;
+  --bs-info: #0dcaf0;
+  --bs-warning: #ffc107;
+  --bs-danger: #dc3545;
+  /* Standard backgrounds */
+  --bs-light: #f8f9fa;
+  --bs-dark: #212529;
 }
 
 body,
 html {
-  display: block;
+  display: flex;
   flex-direction: column;
   flex: 1;
+  margin: 0;
+  padding: 0;
   min-height: 100vh;
   max-width: 100vw;
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+  font-size: 16px;
   overflow-x: hidden;
   font-family: "Work Sans", sans-serif;
 }
@@ -26,6 +50,7 @@ h5 {font-size: 24px;}
 h6 {font-size: 20px;}
 
 footer {
+  bottom: 0;
   padding-top: 22px;
   padding-bottom: 14px;
 }
@@ -35,16 +60,22 @@ footer p {
 }
 
 #nav {
+  position: relative;
   top: 0;
   margin-top: 0;
+  min-height: 70px;
 }
 
 #footer {
+  width: 100vw;
   bottom: 0;
+  position: fixed;
   align-content: center;
   align-items: center;
 }
 
 #footer-container {
   bottom: 0;
+  text-align: center;
+  padding-bottom: 0.66rem;
 }
