Updates and styles

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -1,8 +1,8 @@
 ﻿{% extends 'pages/base.html' %}
 
 {% block content %}
-<div class="container-fluid">
-  <h1 class="display-1 m-3">
+<div id="headerOuter" class="container-fluid p-3 mt-5">
+  <h1 id="header" class="display-1 mt-5">
     Designed by <span class="text-primary">Brendan Laney</span>
   </h1>
 </div>
