--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,7 +1,7 @@
 ﻿@import url("https://fonts.googleapis.com/css2?family=Work+Sans&display=swap");
 
 :root {
-  font-size: 16px;
+  font-size: 1rem;
   /* General colors */
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -35,9 +35,9 @@ html {
   flex: 1;
   margin: 0;
   padding: 0;
-  min-height: 100vh;
-  max-width: 100vw;
-  font-size: 16px;
+  height: 100vh;
+  width: 100vw;
+  font-size: 1rem;
   overflow-x: hidden;
   font-family: "Work Sans", sans-serif;
 }
@@ -60,10 +60,12 @@ footer p {
 }
 
 #nav {
-  position: relative;
+  width: 100%;
+  position: absolute;
   top: 0;
   margin-top: 0;
-  min-height: 70px;
+  margin-bottom: 1.5rem;
+  min-height: 79px;
 }
 
 #footer {
@@ -78,4 +80,14 @@ footer p {
   bottom: 0;
   text-align: center;
   padding-bottom: 0.66rem;
+}
+
+#headerOuter {
+  width: 63%;
+}
+
+#header {
+  color: var(--bs-gray-dark);
+  max-width: 550px;
+  text-align: left;
 }
